--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -1,18 +1,20 @@
-formatter: "markdown" # this is required
+formatter: "markdown table" # this is required
 
 version: ""
-
 
 header-from: main.tf
 footer-from: ""
 
 recursive:
-  enabled: true
+  enabled: false
   path: modules
 
 sections:
   hide: []
   show: []
+
+  hide-all: false # deprecated in v0.13.0, removed in v0.15.0
+  show-all: true  # deprecated in v0.13.0, removed in v0.15.0
 
 content: ""
 
@@ -22,7 +24,8 @@ output:
   template: |-
     <!-- BEGIN_TF_DOCS -->
     {{ .Content }}
-    <!-- END_TF_DOCS -->
+    <!-- END_TF_DOCS -->    
+
 output-values:
   enabled: false
   from: ""
