--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,36 +1,18 @@
-name: Release
-
+### This workflow can be used to manually create new release versions from a tag push using e.g. VSCODE ###
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - main
-    paths:
-      - '**/*.tpl'
-      - '**/*.py'
-      - '**/*.tf'
-      - '.github/workflows/release.yml'
+    tags:
+      - '*'
 
+name: Release to terraform public registry
 jobs:
-  release:
+  Release:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+      - uses: ncipollo/release-action@v1
         with:
-          persist-credentials: false
-          fetch-depth: 0
-
-      - name: Release
-        uses: cycjimmy/semantic-release-action@v2
-        with:  
-          semantic_version: 15.13.28
-          # you can set branch for semantic-release older than v16.
-          branch: main
-                # You can specify specifying version range for the extra plugins if you prefer.
-          extra_plugins: |
-            @semantic-release/changelog@3.0.0
-            @semantic-release/git
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          generateReleaseNotes: true
+          name: 'v${{ github.ref_name }}'
+          token: ${{ secrets.GITHUB_TOKEN }}
